@@ -1,3 +1,7 @@
+2017-07-06  Andrew Pinski  <apinski@cavium.com>
+
+	* gcc.target/aarch64/pr71112.c : New Testcase.
+
 2017-07-04  Release Manager
 
 	* GCC 6.4.0 released.
